--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ body, html {
   height: 90px; /* Height of the navbar */
   z-index: 1000; /* Ensure it stays on top of other content */
   display: flex; /* Use flexbox for alignment */
-  justify-content: space-between; /* This should space out your logo and nav-menu */
+  justify-content: space-between; 
   align-items: center;
   padding: 10px 20px; /* Padding around the navbar */
 }
@@ -31,7 +31,7 @@ body, html {
   width: 100%; /* Take up the full width of the navbar */
   margin: 0 auto; /* Center the navbar content */
   display: flex; /* Use flexbox for alignment */
-  justify-content: space-between; /* This should space out your logo and nav-menu */
+  justify-content: space-between; 
   align-items: center;
   padding: 10px 20px;/* Center items vertically */
 }
@@ -67,6 +67,7 @@ body, html {
 .nav-link:hover {
   color: #1DB954; 
 }
+
 .nav-menu.active {
     display: flex;
     flex-direction: column;
@@ -76,32 +77,9 @@ body, html {
     background-color: #000;
   }
 
-/* Responsive menu for smaller screens */
-@media (max-width: 991px) {
-  .hamburger-menu {
-    display: block; /* Show hamburger menu */
-    cursor: pointer;
-  }
-
-  .nav-menu {
-    position: absolute;
-    right: 0;
-    top: 60px; /* Position below the navbar */
-    flex-direction: column; /* Stack the links vertically */
-    background-color: #000; /* Black background */
-    width: 100%; /* Full width */
-    display: none; /* Hide by default */
-  }
-
-  .nav-menu.active {
-    display: flex; /* Show when active (toggled by JavaScript) */
-  }
-}
-
 
 /* Showcase/Hero Section */
 .showcase {
-    background-color: #1DB954; 
     background-image: url('../img/Spotify-on-phone.jpeg'); 
     background-size: cover;
     background-position: center center;
@@ -141,8 +119,8 @@ body, html {
 
 .showcase .btn {
     position: relative;
-    background-color: #000;
-    color: #fff;
+    background-color: #1ED760;
+    color: #000;
     padding: 1em 2em;
     border: none;
     font-size: 1em;
@@ -153,8 +131,15 @@ body, html {
 }
 
 .showcase .btn:hover {
-    background-color: #333; 
+    background-color: #fff; 
 }
+
+.showcase-content {
+    position: relative;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.868);
+    padding: 40px;
+} 
 
 /* Statistics section styles */
 .combined-section {
@@ -196,11 +181,11 @@ body, html {
 
 .questions-content .comment {
     font-style: italic;
-    color: #1DB954; /* Spotify green color for the comment */
+    color: #1DB954;     
 }
 
 .image-section {
-    text-align: center; /* Center the image if it's smaller than the full width */
+    text-align: center; /* Center the image */
 }
 
 .image-section img {
@@ -219,7 +204,7 @@ body, html {
 
 /* How This Works Section Styles */
 .how-this-works {
-    flex: 2; /* Adjust as needed */
+    flex: 2; 
     align-items: flex-start;
     padding-right: 10px; /* Space between the text and the image */
 }
@@ -249,7 +234,7 @@ body, html {
 
 /* Image Section Styles */
 .image-right {
-    flex: 1.5; /* Adjust as needed */
+    flex: 1.5; 
     padding-right: 50px;
 }
 
@@ -329,7 +314,7 @@ body, html {
 .search button {
     padding: 10px 20px; /* Padding inside the button */
     border: none; /* Remove the default border */
-    background-color: #1ED760; /* Green background for the button */
+    background-color: #1ED760; 
     color: #fff; /* White text color */
     cursor: pointer; /* Change cursor to pointer to indicate it's clickable */
     font-size: 16px; /* Font size for the button text */
@@ -339,6 +324,138 @@ body, html {
     background-color: #17c950; /* Slightly different shade of green for hover effect */
 }
 
+/* Floating Button Style */
+.floating-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #1DB954;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+}
+
+.floating-btn:hover {
+    background-color: #17a64a; /* Darker shade for hover */
+}
+
+/* Recommendation Popup Styles */
+.recommendation-popup {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.popup-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px 30px;
+    border: 1px solid #888;
+    width: 80%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center align the content */
+    text-align: center;
+    font-size: 40px;
+}
+
+.close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Team Member's Github Icons and Recommendations Buttons */
+.member-list {
+    display: flex;
+    justify-content: center; 
+    flex-wrap: wrap;
+    gap: 90px; 
+    margin-bottom: 20px; 
+}
+
+.member {
+    display: flex;
+    flex-direction: column; /* Stack the icon and button vertically */
+    align-items: center; /* Center items vertically within each member */
+    gap: 20px;
+}
+
+.member i.fa-brands {
+    font-size: 100px;
+    padding-top: 30px;
+}
+
+.btn-list {
+    background-color: #4CAF50; 
+    color: white; 
+    border: none; 
+    cursor: pointer; 
+    padding: 12px 24px; 
+    border-radius: 5px; 
+    transition: background-color 0.3s;
+    font-size: 20px;
+}
+
+.btn-list:hover {
+    background-color: #45a049; 
+}
+
+.fa-brands {
+    font-size: 30px; 
+    color: #333; 
+}
+
+/* Table */
+.table, .table-list, .table-top{
+    width: 100%;
+    margin-top: 1.5rem;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+.table thead th, .table-list thead th {
+    text-transform: uppercase;
+    padding: 0.8rem;
+}
+
+.table tbody tr td, .table-list tbody tr td, .table-top tbody tr td {
+    background-color: #1ED760;
+    padding: 0.8rem 1.2rem;
+    text-align: center;
+    color: #fff;
+}
+
+/* title column alignment to left */
+.table tbody tr td:nth-child(2) {
+    text-align: left;
+}
+
+.table-title {
+    font-size:2rem;
+    font-weight: bold;
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+    text-align: left;
+}
 
 /* Footer */
 footer {
@@ -407,6 +524,25 @@ footer p {
     .container {
         padding: 20px;
     }
+
+    .hamburger-menu {
+        display: block; /* Show hamburger menu */
+        cursor: pointer;
+      }
+    
+      .nav-menu {
+        position: absolute;
+        right: 0;
+        top: 60px; /* Position below the navbar */
+        flex-direction: column; /* Stack the links vertically */
+        background-color: #000; 
+        width: 100%; /* Full width */
+        display: none; /* Hide by default */
+      }
+    
+      .nav-menu.active {
+        display: flex; 
+      }
 }
 
 @media (max-width: 768px) {
@@ -433,10 +569,9 @@ footer p {
     }
 
     .statistics-content, .questions-content {
-        margin: 20px 0; /* Stack them with space between vertically */
+        margin: 20px 0; 
     }
 }
-
 
 
 
